fix: fix home image overflow

--- a/src/app/styles.module.scss
+++ b/src/app/styles.module.scss
@@ -377,8 +377,6 @@
     height: 58vh;
     position: absolute;
     top: 12vh;
-    left: -10px;
-    width: auto;
   }
 
   .homeFilter {
